Report test coverage to CodeClimate

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,14 @@ sudo: false
 cache:
   bundler: true
 
+before_script:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-darwin-amd64 > ./cc-test-reporter ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter ; fi
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
 # HACK: Continue to use bundler <2 because of Ruby v2.2 support. Once the
 # lowest dependency is Ruby v2.3 we can consider upgrading to Bundler 2.x.
 # @see https://docs.travis-ci.com/user/languages/ruby/#bundler-20
