--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,8 @@
+require: rubocop-rspec
+
 AllCops:
   Exclude:
+    - 'vendor/**/*'
     - 'rspec-timecop.gemspec'
     - 'lib/rspec/timecop/version.rb'
 
