Upgrade minimum required Ruby to v3.1.2
I am considering this the correct minimum Ruby because it is the Ruby
which is available in Debian 12 (bookworm), which is current in January
2025.

* https://www.debian.org/releases/
* https://packages.debian.org/bookworm/ruby/

Most critically this drops support for v2.2, allowing use of the
standard library Bundler (i.e 2.x) and using the latests Rubocop.

Some rubocop refactoring, such as:
* remove the bundler dependency, becuase it is built in now
* add required Rubygems MFA to the gemspec

Github Action script and CI updates:
* drop the unsupported Rubies and added 3.1, 3.2, 3.4
* add simplecov JSON and lcov reporting
* switch ubuntu and macos to latest versions
* remove ruby version specification from the `coverage` step, because it
  should use the default/minimum Ruby specified in the `.ruby-version`
* remove the bundler version specification
* update action/checkout step to v4
* add Yardoc support
* add bundle:outdate Rake task

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,21 @@
 require: rubocop-rspec
 
 AllCops:
-  Exclude:
-    - 'vendor/**/*'
-    - 'rspec-timecop.gemspec'
-    - 'lib/rspec/timecop/version.rb'
+  NewCops: enable
 
-Documentation:
+Gemspec/DevelopmentDependencies:
+  EnforcedStyle: gemspec
+
+Metrics/MethodLength:
+  Max: 20
+
+RSpec/EmptyExampleGroup:
   Enabled: false
+
+# Because of the way that blocks are used in RSpecs can end up being long when
+# example groups are nested or many examples are checked.
+# A similar pattern exists in the DSL for gemspec files.
+Metrics/BlockLength:
+  Exclude:
+    - '*.gemspec'
+    - 'spec/**/*'
