--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,31 +9,23 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, macos-13]
-        ruby: [2.2, 2.3, 2.4, 2.5, 2.6, head, jruby, jruby-head]
+        ruby: [3.1, 3.2, 3.3, 3.4, head, jruby, jruby-head]
     continue-on-error: ${{ endsWith(matrix.ruby, 'head') || endsWith(matrix.ruby, 'jruby') }}
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{ matrix.ruby }}
-        # HACK: Continue to use bundler <2 because of Ruby v2.2 support. Once the
-        # lowest dependency is Ruby v2.3 we can consider upgrading to Bundler 2.x.
-        bundler: 1.14
         bundler-cache: true
     - run: bundle exec rake spec
   coverage:
     needs: [ test ]
     name: coverage
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.2'
-        # HACK: Continue to use bundler <2 because of Ruby v2.2 support. Once the
-        # lowest dependency is Ruby v2.3 we can consider upgrading to Bundler 2.x.
-        bundler: 1.14
         bundler-cache: true
     - run: bundle exec rake
       env:
